meecast (0.9.14) unstable; urgency=low

  * Added string for translation from openweathermap.org source 
  * Removed unnecessary second refresh action on cover page. Thanks George Nikandrov
  * Set source logo to top of cover page. Thanks George Nikandrov
  * Fixed problem with Icon and Null wind speed data on cover page

 -- Vlad Vasiliev <vlad@gas.by> Fri, 12 Dec 2014 17:31:23 +0200

meecast (0.9.13) unstable; urgency=low

  * Added Durovka to gismeteo.ru and foreca.com sources 
  * Added India to Openweathermap.org
  * Fixed problem with Beaufort Wind unit
  * Updated Catalan, Dutch, Finnish, Germany, Slovenian, Spanish, Italian,
    Czech, Swedish, Russian, Danish translations

 -- Vlad Vasiliev <vlad@gas.by> Fri, 12 Dec 2014 17:31:23 +0200

meecast (0.9.12) unstable; urgency=low

  * Added Palanga(Lithuania) to weather.com, yr.no, openweathermap.org sources
  * Removed donation link
  * Added wake up internet connection for refresh weather forecast
  * Added station Poselok rudnika Kupol to gismeteo.ru source
  * Fixed problem with Denmark, Germany stations in openweathermap.org source
  * Fixed incorrect name of pressure from "Pa" to "kPa"
  * Updated Catalan, Dutch, Finnish, Germany, Norway, Slovenian, Spanish,
    Italian, Czech, Danish translations

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 25 Nov 2014 19:31:23 +0200

meecast (0.9.10) unstable; urgency=low

  * Updated Slovenian, Italian, Swedish translations
  * Changed unit mi/h to mph

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 27 Aug 2014 10:31:23 +0200 

meecast (0.9.9) unstable; urgency=low

  * Fixed problem with USA like style time for last update, sunrise, sunset
    and hourly information 
  * Added stations Lignano Pineta, Lignano Riviera, Lignano Sabbiadoro (Italy) to
    weather.com, foreca.com source  
  * Added stations Lignano Sabbiadoro (Italy) to gismeteo.ru source  
  * Added all stations from Regione Autonoma Friuli Venezia Giulia to
    openwearthermap.org source